Fix link spacing for mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -100,6 +100,8 @@ a {
         color: $text-color;
         text-decoration: underline;
     }
+
+    padding-block: 8px;
 }
 
 
